# chat-bot-conversacional

./: .gitignore  README.md  gradio_chat.py  pyproject.toml
app/: main.py
app/data/: catalog.json  catalog_loader.py
app/domain/: product.py
app/engine/: memory.py  response.py  service.py  state.py
app/graph/: builder.py
app/graph/nodes/: __init__.py  adjust_qty.py  bulk_cart.py  cart.py  catalog.py  checkout.py  clarify_product.py  fallback.py  interpret.py  recommend.py
app/graph/routing/: rules.py  selectors.py
app/graph/routing/rules/: __init__.py  cart_bulk_rules.py  cart_name_fallback_rules.py  cart_single_rules.py  catalog_rules.py  checkout_rules.py  common_rules.py  help_rules.py  language_rules.py  out_of_scope_rules.py  product_detail_rules.py  recommend_rules.py
app/llm/: config.py  openai_router.py  router_schema.py
app/services/: __init__.py  cart_service.py  catalog_service.py  recommend_service.py
app/tests/: conftest.py  test_cart_tools.py  test_checkout.py  test_graph_behavior.py
app/tools/: __init__.py  cart_tools.py  catalog_tools.py  recommend_tools.py  search_tools.py
app/utils/: __init__.py  cart_commands.py  cart_commands_by_name.py  parsing.py  recommend_parsing.py
app/ux/: __init__.py  copy.py
docs/: chat.md
scripts/: demo_cli.py
